@@ -24,7 +24,8 @@ import java.util.Iterator;
 
 public class TargetGenerationReport {
     private final HashMap<String, ArrayList<Exception>> hash;
-
+    private boolean hasError;
+    
     public TargetGenerationReport() {
         this.hash = new HashMap<String, ArrayList<Exception>>();
     }
@@ -34,9 +35,14 @@ public class TargetGenerationReport {
             ArrayList<Exception> list = new ArrayList<Exception>();
             list.add(e);
             hash.put(project, list);
+            hasError = true;
         } else {
             hash.get(project).add(e);
         }
+    }
+    
+    public boolean hasError() {
+        return hasError;
     }
  
     public String toString() {
